--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.7.7",
     "element-plus": "^2.8.6",
-    "vue": "^3.3.4"
+    "pinia": "^2.2.5",
+    "pinia-plugin-persistedstate": "^4.1.2",
+    "vue": "^3.3.4",
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.3.4",
