--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.7.7",
     "element-plus": "^2.8.6",
     "lodash.debounce": "^4.0.8",
+    "masonry-layout": "^4.2.2",
     "pinia": "^2.2.5",
     "pinia-plugin-persistedstate": "^4.1.2",
     "vue": "^3.3.4",
